# web3-gov-summariser

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: config.py  proposal_summary.py
